移植蓝图预算放置管道到 1.12.2